--- a/style.css
+++ b/style.css
@@ -7,6 +7,14 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+div + a {
+    font-size: large;
+    font-weight: 900;
+    color: #000 !important;
+    text-decoration: underline !important;
+    margin-left: 14px;
+}
+
 a,
 button {
     transition: all .3s ease-in-out;
