--- a/style.css
+++ b/style.css
@@ -7,14 +7,6 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
-div + a {
-    font-size: large;
-    font-weight: 900;
-    color: #000 !important;
-    text-decoration: underline !important;
-    margin-left: 14px;
-}
-
 a,
 button {
     transition: all .3s ease-in-out;
@@ -837,13 +829,13 @@ h4 {
     }
 }
 
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
+@media only screen and (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
     .b-parallax {
         background-attachment: scroll;
     }
 }
 
-@media only screen and (min-device-width: 1024px) and (max-device-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
